<resources>
    <string name="app_name">YotubePracer</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="text">Text</string>
    <string name="videos">videos</string>
    <string name="playlist">playlist</string>
    <string name="playlist2">Playlist</string>
    <string name="back">Back</string>
    <string name="button">button</string>
    <string name="videoseries">videoSeries</string>
    <string name="title">title</string>
    <string name="time">time</string>
</resources>
