<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/container"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/playlist"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:background="@color/light_black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="@id/playlist"
        app:layout_constraintTop_toTopOf="@id/playlist" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosantlight"
        android:text="@string/playlist"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="73dp" />

    <TextView
        android:id="@+id/name_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/regular"
        android:text="@string/text"
        android:textColor="@color/light_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/videos"
        android:layout_width="84dp"
        android:layout_height="17dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/name_playlist"
        app:layout_constraintStart_toEndOf="@id/playlist"
        android:fontFamily="@font/notosantlight"
        android:text="@string/videos"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>